# sfml-simple-example

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake_modules/: FindSFML.cmake
src/: main.cpp
